@@ -285,14 +285,14 @@ function __pagination($total = 10, $perPage = 6, $current = 1, $urlAppend = '/',
     return (new \Zest\Common\Pagination($total, $perPage, $current, $urlAppend, $ulCLass, $liClass, $aClass))->pagination();
 }
 if (!function_exists('container')) {
-    function container($identifier)
+    function container($identifier, $params = [])
     {
-        return (new \Zest\Common\Container\DIS())->get($identifier);
+        return (new \Zest\Common\Container\DIS())->get($identifier, $params);
     }
 }
-function __container($identifier)
+function __container($identifier, $params = [])
 {
-    return (new \Zest\Common\Container\DIS())->get($identifier);
+    return (new \Zest\Common\Container\DIS())->get($identifier, $params);
 }
 if (!function_exists('config')) {
     function config()
